@@ -40,6 +40,7 @@ This release also includes changes from <<release-3-4-11, 3.4.11>>.
 * Allowed `property(T.label,Object)` to be used if no value was supplied to `addV(String)`.
 * Dropped support for .NET Standard 1.3 in Gremlin.Net. Only .NET Standard 2.0 is supported starting with this version.
 * Added GraphBinary support for .NET.
+* Added `UnifiedChannelizer` which exposes HTTP and Websockets connections and processes both sessionless and in-session requests with the same `gremlinPool`.
 * Bounded the `gremlinPool` in Gremlin Server to enforce rate limiting which will then produce a `TOO_MANY_REQUESTS` response status code.
 * Switched from `Newtonsoft.Json` to `System.Text.Json` as the JSON library for Gremlin.Net.
 * Allowed additional arguments to `Client.submit()` in Javascript driver to enable setting of parameters like `scriptEvaluationTimeout`.
